--- a/benchmarks/empty-contract-1of.yaml
+++ b/benchmarks/empty-contract-1of.yaml
@@ -91,7 +91,7 @@ monitors:
      - module: prometheus
        options:
          interval: 5
-         url: "http://172.17.0.1:9090"
+         url: "http://localhost:9090"
          metrics:
            include: [dev-.*, couch, peer, orderer]
            queries:
