--- a/prometheus-grafana/prometheus/prometheus-fabric.yml
+++ b/prometheus-grafana/prometheus/prometheus-fabric.yml
@@ -10,14 +10,14 @@ scrape_configs:
     honor_labels: true
     # Assumes local caliper workers are scrape targets, only one here
     static_configs:
-    - targets: ['localhost:9444']
+    - targets: ['host.docker.internal:9444']
   - job_name: cadvisor
     scrape_interval: 5s
     static_configs:
-    - targets: ['localhost:8080']
+    - targets: ['host.docker.internal:8080']
   - job_name: node
     static_configs:
-    - targets: ['localhost:9100']
+    - targets: ['host.docker.internal:9100']
 #  - job_name: caliper
 #    scrape_interval: 5s
 #    static_configs:
